# chef-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  config.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init.py  0002_menus_meals.py  0003_shopping.py  0004_conversations.py
bot/: date_input.py  formatting.py  fsm.py  keyboards.py  main.py  middlewares.py  scheduler.py
bot/handlers/: freetext.py  load.py  menu.py  plan.py  recipe.py  shopping.py  start.py
core/: db.py  exceptions.py  llm.py  models.py  repositories.py  tools.py
core/prompts/: base_context.md  conversation.md  dish_replacer.md  menu_planner.md  recipe.md  shopping_list.md
core/services/: conversation.py  digest.py  dish_replacer.py  family_service.py  menu_loader.py  menu_planner.py  recipe_service.py  reminders.py  shopping_list.py
docs/superpowers/plans/: 2026-05-25-chef-bot-mvp.md
docs/superpowers/specs/: 2026-05-25-chef-bot-design.md  2026-05-27-phase-4-design.md
scripts/: wipe_db.py
tests/: conftest.py
tests/integration/: test_conversation.py  test_digest.py  test_dish_replacer.py  test_family_service.py  test_menu_loader.py  test_menu_planner.py  test_recipe_service.py  test_reminders.py  test_shopping_list.py
tests/unit/: test_config.py  test_date_input.py  test_formatting.py  test_llm_parsing.py  test_models.py  test_reminders.py  test_scheduler.py  test_shopping_notifications.py  test_tools.py
